# face_reid

./: Makefile  README.md  emul.mk  face_reid.c  face_reid.h  model_decl.mk  model_rules.mk
gap_project/: CMakeLists.txt  DeMosaicModel.c  DrawBB.py  Kconfig  README.md  face_det.h  face_det_id.c  face_det_id_demo.c  face_det_id_gen_signature.c  face_id.c  face_id.h  francesco_cropped_r256.ppm  gaptest.yml  golden.h  he.c  he.h  post_process.c  post_process.h  sdk.config  uart_demo_screen.py
gap_project/cropped_faces/: francesco_1.png_face_crop.ppm  francesco_2.png_face_crop.ppm  manuele_1.png_face_crop.ppm  manuele_2.png_face_crop.ppm
gap_project/hd_samples/: hd01.pgm  hd02.pgm  hd03.pgm
gap_project/model/: face_detection.ipynb  face_id.ipynb  gen_facedet_at_model.py  gen_faceid_at_model.py  generate_at_model.py
gap_project/vga_samples/: test_image_raw_bayer.pgm  test_image_raw_bayer480x480.pgm  test_image_raw_bayer480x480_2.pgm  test_image_raw_bayer_2.pgm
images/: leo.pgm  leo2.pgm
model/: nntool_script  shufflenet.onnx
model_training/: README.md  checkpoint2ONNX.py  config.py  get_datasets.py  lfw_eval.py  train.py
model_training/core/: model.py
model_training/dataloader/: CASIA_Face_loader.py  LFW_loader.py
model_training/inference/: inference_blazeface.py
model_training/model/best/: 010.ckpt  010.pt  020.ckpt  020.pt  030.ckpt  030.pt  040.ckpt  040.pt  050.ckpt  050.pt  060.ckpt  060.pt  070.ckpt  070.pt
